chore: fix small main layout issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,7 +112,6 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
   user-select: none;
 }
 
